force-app/main/default/objects/GDPR_Erasure_Request__c/GDPR_Erasure_Request__c.object-meta.xml
<CustomObject>
    <description>GDPR Article 17 - Right to Erasure audit trail. Tracks all data subject deletion requests.</description>
    <label>GDPR Erasure Request</label>
    <nameField>
        <displayFormat>GDPR-{0000}</displayFormat>
        <label>Request Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>GDPR Erasure Requests</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>