force-app/main/default/objects/GDPR_Erasure_Request__c/fields/Completion_Date__c.field-meta.xml
<CustomField>
    <fullName>Completion_Date__c</fullName>
    <description>Date and time the erasure was completed</description>
    <label>Completion Date</label>
    <type>DateTime</type>
</CustomField>