force-app/main/default/objects/GDPR_Erasure_Request__c/fields/Contact__c.field-meta.xml
<CustomField>
    <fullName>Contact__c</fullName>
    <label>Contact</label>
    <type>Lookup</type>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>GDPR Erasure Requests</relationshipLabel>
    <relationshipName>GDPR_Erasure_Requests</relationshipName>
    <description>Contact subject of the erasure request</description>
</CustomField>