force-app/main/default/objects/GDPR_Erasure_Request__c/fields/Contact_Email__c.field-meta.xml
<CustomField>
    <fullName>Contact_Email__c</fullName>
    <description>Email of the data subject (preserved for audit after deletion)</description>
    <label>Contact Email</label>
    <required>true</required>
    <type>Email</type>
</CustomField>