force-app/main/default/objects/GDPR_Erasure_Request__c/fields/Contact_Id__c.field-meta.xml
<CustomField>
    <fullName>Contact_Id__c</fullName>
    <description>Original Contact ID (preserved for audit after deletion)</description>
    <label>Contact ID</label>
    <length>18</length>
    <type>Text</type>
</CustomField>