force-app/main/default/objects/GDPR_Erasure_Request__c/fields/Processed_Date__c.field-meta.xml
<CustomField>
    <fullName>Processed_Date__c</fullName>
    <label>Processed Date</label>
    <type>DateTime</type>
    <description>Date and time when the erasure request was processed</description>
</CustomField>