force-app/main/default/objects/GDPR_Erasure_Request__c/fields/Records_Deleted__c.field-meta.xml
<CustomField>
    <fullName>Records_Deleted__c</fullName>
    <description>Total number of records deleted</description>
    <label>Records Deleted</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>