force-app/main/default/objects/GDPR_Erasure_Request__c/fields/Rejection_Reason__c.field-meta.xml
<CustomField>
    <fullName>Rejection_Reason__c</fullName>
    <label>Rejection Reason</label>
    <type>LongTextArea</type>
    <length>32768</length>
    <description>Reason why the erasure request was rejected</description>
</CustomField>