force-app/main/default/objects/GDPR_Erasure_Request__c/fields/Request_Date__c.field-meta.xml
<CustomField>
    <fullName>Request_Date__c</fullName>
    <description>Date and time the erasure request was submitted</description>
    <label>Request Date</label>
    <required>true</required>
    <type>DateTime</type>
</CustomField>