force-app/main/default/objects/GDPR_Erasure_Request__c/fields/Request_Reason__c.field-meta.xml
<CustomField>
    <fullName>Request_Reason__c</fullName>
    <description>Reason provided for the erasure request</description>
    <label>Request Reason</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>