force-app/main/default/objects/GDPR_Erasure_Request__c/fields/Requested_By__c.field-meta.xml
<CustomField>
    <fullName>Requested_By__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>User who initiated the erasure request</description>
    <label>Requested By</label>
    <referenceTo>User</referenceTo>
    <relationshipName>GDPR_Erasure_Requests</relationshipName>
    <type>Lookup</type>
</CustomField>