force-app/main/default/objects/GDPR_Erasure_Request__c/fields/Requested_Date__c.field-meta.xml
<CustomField>
    <fullName>Requested_Date__c</fullName>
    <label>Requested Date</label>
    <type>DateTime</type>
    <description>Date and time when the erasure was requested</description>
</CustomField>